--- a/Itokawa/manifest.json
+++ b/Itokawa/manifest.json
@@ -3,28 +3,35 @@
  "display":"standalone",
  "icons": [
   {
-   "src": "favicon\/apple-icon-72x72.png",
+   "src": "favicon/apple-icon-72x72.png",
    "sizes": "72x72",
-   "type": "image\/png",
+   "type": "image/png",
    "density": "1.5"
   },
   {
-   "src": "favicon\/favicon-96x96.png",
+   "src": "favicon/favicon-96x96.png",
    "sizes": "96x96",
-   "type": "image\/png",
+   "type": "image/png",
    "density": "2.0"
   },
   {
-   "src": "favicon\/apple-icon-144x144.png",
+   "src": "favicon/apple-icon-144x144.png",
    "sizes": "144x144",
-   "type": "image\/png",
+   "type": "image/png",
    "density": "3.0"
   },
   {
-   "src": "favicon\/android-icon-192x192.png",
+   "src": "favicon/android-icon-192x192.png",
    "sizes": "192x192",
-   "type": "image\/png",
+   "type": "image/png",
    "density": "4.0"
-  }
+  },
+  {
+    "src": "favicon/android-maskable-icon-196x196.png",
+    "sizes": "196x196",
+    "type": "image/png",
+    "density": "4.0",
+    "purpose": "any maskable"
+   }
  ]
 }
